# camera_cpp

./: README.md  cam.cpp  cam.hpp  event_loop.cpp  file_sink.cpp  main.cpp  make_cam.sh  makefile  meson.build
